--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "CCNP",
         "countup",
         "Cyberdefenders",
+        "Cybersec",
         "Dama",
         "ENSA",
         "firstname",
